[package]
name = "chunfen"
version = "0.1.0"
authors = ["Thomas Lin <dkeehl@gmail.com>"]
edition = "2018"

[workspace]
members = [
  "./",
  "chunfen-socks",
  "chunfen-sec",
]

[dependencies]
time = "*"
log = { version = "*", features = ["std"] }
futures = "0.1"
tokio-current-thread = "0.1"
tokio-tcp = "0.1"
tokio-io = "0.1"
tokio-timer = "0.2"
tokio-reactor = "0.1"
tokio-executor = "0.1"
bytes = "0.4"
nom = "4.1"
chunfen-socks = { path = "chunfen-socks" }
chunfen-sec = { path = "chunfen-sec" }
