[package]
name = "chunfen"
version = "0.1.0"
authors = ["Thomas Lin <dkeehl@gmail.com>"]
edition = "2018"

[workspace]
members = [
  "./",
  "chunfen-socks",
  "chunfen-sec",
]

[dependencies]
log = "0.4"
futures = "0.1"
tokio = "0.1"
tokio-tcp = "0.1"
tokio-io = "0.1"
tokio-timer = "0.2"
bytes = "0.4"
nom = "4.1"
getopts = "0.2"
fern = "0.5"
chrono = "0.4"
chunfen-socks = { path = "chunfen-socks", features = ["nom-support"] }
chunfen-sec = { path = "chunfen-sec" }
