[package]
name = "chunfen-socks"
version = "0.1.0"
authors = ["Thomas Lin <dkeehl@gmail.com>"]
edition = "2018"

[[bin]]
name = "socks"
path = "src/bin/main.rs"

[dependencies]
log = "0.4"
futures = "0.1"
tokio-current-thread = "0.1"
tokio-tcp = "0.1"
tokio-io = "0.1"
bytes = "0.4"
getopts = "0.2"
fern = "0.5"
chrono = "0.4"
