[package]
name = "chunfen-socks"
version = "0.1.0"
authors = ["Thomas Lin <dkeehl@gmail.com>"]
edition = "2018"

[[bin]]
name = "socks"
path = "src/bin/main.rs"

[features]
# Add nom combinators parsing SocksAddr
nom-support = ["nom"]

[dependencies]
log = "0.4"
futures = "0.1"
tokio = "0.1"
tokio-tcp = "0.1"
tokio-io = "0.1"
bytes = "0.4"
getopts = "0.2"
fern = "0.5"
chrono = "0.4"

nom = { version = "4.1", optional = true }
